charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-friendly-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - friendly.sayedsadeed.com
    secretName: ui-friendly-secret
  rules:
    - host: friendly.sayedsadeed.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-friendly
                port: 
                  number: 80
